2010-08-01 Marco Caliari <marco.caliari@univr.it>

	* general/bicubic.m: Fix bug #30400 when bicubic called with small
	numbers of arguments.

2010-08-04  Jaroslav Hajek  <highegg@gmail.com>

	* general/sortrows.m: Don't actually permute the rows if not
	requested.

2010-08-04  Ben Abbott <bpabbott@mac.com>

	* /plot/print.m, plot/__print_parse_opts__.m, plot/__gnuplot_print__.m, 
	plot/private/__ghostscript__.m: plot/__fltk_print__.m: Add ps and pdf
	output for fltk backend, improved use of ghostscript, and minor
	improvements.

2010-08-01  Rik <octave@nomad.inbox5.com>

	* deprecated/intwarning.m, general/arrayfun.m, general/cplxpair.m,
	general/interp1.m, general/interpn.m, general/quadgk.m,
	general/structfun.m, image/image_viewer.m, io/strread.m,
	miscellaneous/warning_ids.m, optimization/lsqnonneg.m, pkg/pkg.m,
	plot/__marching_cube__.m, plot/bar.m, plot/contourc.m, plot/errorbar.m,
	plot/ezplot.m, plot/isocolors.m, plot/isonormals.m, plot/isosurface.m,
	plot/stem.m, plot/stem3.m, polynomial/compan.m, polynomial/ppval.m,
	signal/arch_rnd.m, sparse/pcg.m, sparse/svds.m,
	special-matrix/invhilb.m, statistics/distributions/wblcdf.m,
	testfun/assert.m, testfun/demo.m, testfun/speed.m: 
	Grammarcheck documentation.  Add @noindent lines and ensure line 
	length is less than 80.

2010-08-01  Martin Helm <martin@mhelm.de>

	* plot/isosurface.m: Swap rows and columns of matrix in call to
	meshgrid.

2010-08-01  Rik <octave@nomad.inbox5.com>

	* plot/print.m: Update documentation string.  Change to active voice.

2010-07-30  Rik <octave@nomad.inbox5.com>

	* Makefile.am: add .DOCSTRINGS to the DISTCLEANFILES list

2010-07-29  Ben Abbott <bpabbott@mac.com>

	* plot/print.m, plot/__print_parse_opts__.m, plot/__fltk_print__.m,
	plot/__gnuplot_print__.m: Improved printing for the fltk backend.
	* plot/private/__ghostscript__.m, plot/private/__tight_eps_bbox__.m:
	New files to support printing.

2010-07-29  Jaroslav Hajek  <highegg@gmail.com>
