@@ -1,3 +1,7 @@
+2010-08-05  Ben Abbott <bpabbott@mac.com>
+
+	* plot/print.m: Modify texinfo. Add unwind_protect block.
+
 2010-08-01 Marco Caliari <marco.caliari@univr.it>
 
 	* general/bicubic.m: Fix bug #30400 when bicubic called with small
